# batouLab

./: .arbo.txt.kate-swp  .gitignore  .token et lauching.kate-swp  BRANDING.md  BatouLab_Maestro_Presentation.md  ChatWithHistory.tsx  README.md  VERSION.md  arbo  arbo.txt  backup-conflicted-1758734232.tgz  backup_1756667493_main.rs  backup_1756669163_main.rs  backup_1756669263_main.rs  backup_1756672546_main.rs  batou_lab_rapport_de_projet_v_0.md  fix_decrypt.sh  fix_rust.sh  index.html  package-lock.json  package.json  package.json.bak  roadmap sauvegarde des conversation  roadmap_sauvegarde_des_conversation.md  token et lauching  tsconfig.json  update.sh  vite.config.ts
backup_1756659637/: conversation.ts  main.rs
backup_1756663405/: package.json  tsconfig.node.json
backup_1756663868/: main.rs
backup_1756679637/: ChatWithHistory.tsx.bak
backup_1756680267/: ChatWithHistory.tsx.bak
backup_1757180160/: index.html
backup_1757182896/: index.html
backup_1757188697/: index.html
backup_pre_patch/: package.json
src-tauri/: Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.1758736492  Cargo.toml.bak.1758736946  Cargo.toml.bak.1758738061  tauri.conf.json  tauri.conf.json.bak  tauri.conf.json.bak.1758735621
src-tauri/capabilities/: conversations.json  conversations.json.bak.1758738061  http-mistral.json  main.json  sql.json
src-tauri/src/: chat_api.rs.bak  keys.rs  lib.rs  lib.rs.bak.1758738061  main.rs  main.rs.bak  main.rs.bak.1756668609  main.rs.bak.1758738061
src-tauri/src/providers/: anthropic.rs  mistral.rs  mod.rs  openai.rs
src-tauri/src/util/: mod.rs
(+82 files in other folders)
