[package]
name = "batoulab-app"
version = "0.0.3-b"
edition = "2021"

# src-tauri/Cargo.toml
[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
tauri-plugin-http = "^2"
tauri-plugin-fs = "^2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "^2", features = [] }
